<resources>
    <string name="app_name">Deve Edi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Add</string>

    <string name="menu_sell">Bán hàng</string>
    <string name="menu_report">Báo cáo</string>
    <string name="menu_res_menu">Thực đơn</string>
    <string name="ban_hang">Bán hàng</string>
    <string name="lam_thue">Làm thuê</string>
    <string name="thuc_don">Thực đơn</string>
    <string name="bao_cao">Báo cáo</string>
    <string name="sao_luu_du_lieu">Sao lưu dữ liệu</string>
    <string name="thiet_lap_du_lieu">Thiết lập dữ liệu</string>
    <string name="phuc_hoi_du_lieu">Phục hồi dữ liệu</string>
    <string name="lien_ket_tai_khoan">Liên kết tài khoản</string>
    <string name="thong_bao">Thông báo</string>
    <string name="gioi_thieu_cho_ban">Giới thiệu cho bạn</string>
    <string name="danh_gia_ung_dung">Đánh giá ứng dụng</string>
    <string name="tro_giup">Trợ giúp</string>
    <string name="gop_y_nha_phat_trien">Góp ý nhà phát triển</string>
    <string name="thong_tin_san_pham">Thông tin sản phẩm</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="dat_lai_mat_khau">Đặt lại mật khẩu</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="ten_mon">Tên món</string>
    <string name="comment">Khi bấm vào đăng ký đồng nghĩa với việc bạn đã đọc, hiểu và đồng ý với thỏa thuận sử dụng dịch vụ của DEVE EDI.</string>
    <string name="information"> <b>DEVE EDI</b> là ứng dụng miễn phí dành riêng cho các quán nhỏ
    và quầy di động phục vụ ăn uống giúp chủ quán ghi món, tính tiền, cộng sự và thống kê doanh thu bán hàng nhanh chóng
    và dễ dàng trên điện thoại.
    </string>
    <!--    <b>DEVE EDI</b> giúp chủ quán thực hiện các nghiệp vụ sau:<br /> <br />-->
    <!--    ► Cập nhật thực đơn của quán<br/>-->
    <!--    ► Ghi nhận các món khách gọi <br/>-->
    <!--    ► Tính tiền cho khách<br/>-->
    <!--    ► Thêm cộng sự bán hàng<br/>-->
    <!--    ► Xem thống kê doanh thu theo thời gian<br/>-->
    <!--    ► Xem thống kê doanh thu theo mặt hàng<br/>-->
    <!--    </string>-->
    <string name="edition">Phiên bản ứng dụng <b>1.0.0</b> </string>
    <!--    <string name="default_web_client_id">phu-project-e8479</string>-->
</resources>