<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_sell">

    <fragment
        android:id="@+id/nav_sell"
        android:name="com.example.RestaurantManagement.ui.home.HomeFragment"
        android:label="@string/menu_sell"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.RestaurantManagement.ui.gallery.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_res_menu"
        android:name="com.example.RestaurantManagement.ui.restaurant_menu.RestaurantMenuFragment"
        android:label="@string/menu_res_menu"
        tools:layout="@layout/fragment_restaurantmenu" />
</navigation>